# MeshWall

./: README.md
Meshwall/: .env.example  DOCUMENTATION.md  README.md  pyproject.toml
Meshwall/scripts/: meshwall-domain-update.service  meshwall-domain-update.timer  meshwall-fetch.service  meshwall-fetch.timer  meshwall-listener.service  meshwall-monitor.service
Meshwall/src/meshwall/: __init__.py  __main__.py  cli.py  config.py  db.py  domain_fetcher.py  fetcher.py  ipset_manager.py  iptables_manager.py  listener.py  listener_nflog.py  models.py  trace.py  utils.py
Meshwall/src/meshwall/ai/: __init__.py  client.py  rag.py  summarizer.py
Meshwall/src/meshwall/webapp/: __init__.py  app.py  domain_checker.py  extensions.py
Meshwall/src/meshwall/webapp/blueprints/: ai_chat.py  dashboard.py  domains.py
Meshwall/src/meshwall/webapp/static/css/: style.css
Meshwall/src/meshwall/webapp/static/js/: offline-tiles.js
Meshwall/src/meshwall/webapp/templates/: base.html  chat.html  dashboard.html  domains.html
Meshwall/wrapper-scripts/: usr-local-bin-meshwall
